Fix the background image squishing

--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ a{
 }
 .left{
     background: url('./image.jpg') no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     background-position: center;
     height: 100%;
-    width: clamp(400px, 40vw, 40%);
+    width: clamp(300px, 40%, 40vw);
     background-color: lightblue;
     display: flex;
     flex-direction: column;
@@ -74,7 +74,7 @@ a{
 .right {
     background-color: #f6f7f8;
     height: 100%;
-    width: 60%;
+    width: auto;
     display: flex;
     flex-direction: column;
 }
@@ -215,6 +215,7 @@ input:focus{
         justify-content: space-between;
         margin: 0 auto;
         background-attachment: scroll;
+        background-position:bottom;
     }
     .form-container{
         flex-wrap: wrap;
